// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EdgesSelection should match snapshot when customQueryOutput  1`] = `
<Connect
  actions={
    Object {
      "addSubValueToObject": [Function],
      "addToArray": [Function],
      "addToObject": [Function],
      "removeFromArray": [Function],
      "removeFromObject": [Function],
      "resetSelectedEdges": [Function],
      "resetSelectedNodes": [Function],
      "setStoreState": [Function],
    }
  }
  addToArray={[MockFunction]}
  customQueryOutput="{ items: [] }"
  customQueryStringHistory={
    Array [
      "q.v()",
    ]
  }
  mapToProps={[Function]}
  removeFromArray={[MockFunction]}
  setStoreState={[MockFunction]}
>
  <Component />
</Connect>
`;

exports[`EdgesSelection should match snapshot when no customQueryOutput  1`] = `
<Connect
  actions={
    Object {
      "addSubValueToObject": [Function],
      "addToArray": [Function],
      "addToObject": [Function],
      "removeFromArray": [Function],
      "removeFromObject": [Function],
      "resetSelectedEdges": [Function],
      "resetSelectedNodes": [Function],
      "setStoreState": [Function],
    }
  }
  addToArray={[MockFunction]}
  customQueryStringHistory={
    Array [
      "q.v()",
    ]
  }
  mapToProps={[Function]}
  removeFromArray={[MockFunction]}
  setStoreState={[MockFunction]}
>
  <Component />
</Connect>
`;
